--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -133,6 +133,7 @@
 @media (max-width:500px) {
     .box{
         justify-content: space-evenly;
+        gap: 3px;
     }
     .box .heading{
         padding: 6px;
@@ -142,7 +143,7 @@
     .box h1{
         margin-top: 0.5vw;
         margin-bottom: 2px;
-        font-size: 5vh;
+        font-size: 4vh;
         font-weight: 500;
     }
     .box p{
